--- a/css/style.css
+++ b/css/style.css
@@ -1197,7 +1197,7 @@ footer{
         width: 100% !important;
     }
 
-    .form__find-information > ul.input-province li .input_point ul.province{
+    .form__find-information > ul.input-province ul.province{
         width: 90% !important;
         height: 200px;
     }
@@ -1249,7 +1249,7 @@ footer{
         font-size: 2rem;
     }
 
-    .form__find-information > ul.input-province li .input_point ul.province li {
+    .form__find-information > ul.input-province ul.province li {
         font-size: 1.8rem;
         padding: 8px 8px;
     }
