--- a/css/loading.css
+++ b/css/loading.css
@@ -28,8 +28,8 @@
 }
 
 .overloading .content{
-    font-size: 2rem;
-    padding-top: 8px;
+    font-size: 2.2rem;
+    padding:8px 0 0 8px;
     color: var(--white-color);
     font-weight: bold;
 }
