--- a/css/style.css
+++ b/css/style.css
@@ -570,7 +570,7 @@ main .form__find-information i.fa-caret-down{
 
 .form__find-information > ul.input-province ul.province{
     position: absolute;
-    top: 110%;
+    top: 100%;
     width: 90%;
     height: 150px;
     overflow: hidden;
@@ -656,11 +656,12 @@ main .form__find-information i.fa-caret-down{
     border: none;
     background-color: var(--primary-color);
     font-size: 1.4rem;
-    color: var(--white-color);
     cursor: pointer;
     transition: all .2s linear;
     box-shadow: rgba(22, 8, 69, 0.16) 0px 3px 6px, rgba(54, 50, 69, 0.23) 0px 3px 6px;
+    color: var(--white-color);
 }
+
 
 .button_find button:hover{
     font-size: 1.6rem;
@@ -1249,6 +1250,10 @@ footer{
         font-size: 2rem;
     }
 
+    .form__find-information > ul.input-province ul.province{
+        top: 100%;
+    }
+
     .form__find-information > ul.input-province ul.province li {
         font-size: 1.8rem;
         padding: 8px 8px;
@@ -1416,6 +1421,9 @@ footer{
 
     .form__find-information ul.province{
         z-index: 1;
+    }
+    .form__find-information > ul.input-province ul.province{
+        top: 92%;
     }
 
      .form__date-body {
