--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -60,11 +60,15 @@ main .about_us .content_general .content > p:last-child{
 
 
 
-.about_us .content__web-editer .content-bgr .content>p:nth-child(2){
+.about_us .content__web-editer .content-bgr .content > p:nth-child(2){
     color: rgb(185, 55, 0);
     font-size: 1.7rem;
-    font-weight: bold;
+    font-weight:bold;
     padding: 8px 0;
+}
+
+.about_us .content__web-editer .content-bgr .content ul li p{
+    font-weight: normal;
 }
 
 .about_us .content__web-editer .content-bgr ul{
@@ -99,6 +103,7 @@ main .about_us .content_general .content > p:last-child{
 
 /* button xem thêm */
 .btn_aboutUs{
+    padding-top: 12px;
     display: flex;
     justify-content: center;
 }
